src/components/BuilderComponents/styles/TextAndImageBlock.scss
.TextAndImageBlock {
  justify-content: space-between;
  display: grid;
  grid-template-columns: 1fr;

  &__content {
    font-size: 18px;
    margin: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: left;
    p:first-of-type {
      margin-top: 1rem;
    }
    // content always displayed left to right
    direction: ltr;
  }

  &__image {
    align-self: center;
    position: relative;
    line-height: 0.5;
    margin-bottom: 2rem;
  }

  // tablet and up
  @media (min-width: 768px) {
    grid-template-columns: 1fr 1fr;
    &__content {
      padding: 1rem;
    }

    &__image {
      margin: 1rem 0 0 0;
    }
  }
}

